Add book template (files copied from old repository)

--- a/README
+++ b/README
@@ -1,1 +1,32 @@
 This repository contains all files for the FEniCS book.
+Instructions for authors
+------------------------
+
+* Rename the directory chapters/foo to something suitable, for example
+  karpeev_knepley, scott_terrel or similar.
+
+* Put the text for your chapter in the file chapter.tex in your
+  subdirectory.
+
+* Put references in the common file bibliography.bib. Use keys such as
+  FooBar2008a, concatenating the first three letters of the last names
+  of the first two authors with the year and an additional character
+  to separate multiple references by the same authors. The editors
+  will sort out any overlapping references/keys later.
+
+* Put any figures directly in your subdirectory.
+
+* Use EPS files for figures in combination with psfrag.
+
+* Use a spell-checker to check your text before submitting.
+
+* Use \index{} to include important terms in the book index.
+
+* Build the book by typing 'make' or 'make final'.
+
+* When you are done, pack up your subdirectory as a tarball and submit
+  it together with the file bibliography.bib to one of the editors:
+
+  Anders Logg <logg@simula.no>
+  Kent-Andre Mardal <kent-and@simula.no>
+  Garth N. Wells <gnw20@cam.ac.uk>
