Add chapter [kirby-6]: Common and Unusual Finite Elements

--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -12,6 +12,7 @@
 \usepackage{makeidx}
 \usepackage{longtable}
 \usepackage{here}
+\usepackage{array}
 
 % Fonts and chapter styles
 \usepackage{sectsty}
