Add chapter [kirby-7]: The Finite Element Method

--- a/README
+++ b/README
@@ -1,4 +1,14 @@
 This repository contains all files for the FEniCS book.
+
+Put SVG and EPS files under
+
+  chapters/foo/svg
+  chapters/foo/eps
+
+Use common bibliography.bib
+
+Key format needs to be the same
+
 Instructions for authors
 ------------------------
 
