--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -44,12 +44,20 @@
 \newcommand{\includechapter}[1]{\include{chapters/#1/chapter}\clearemptydoublepage}
 \newcommand{\includeappendix}[1]{\include{appendix/#1}\clearemptydoublepage}
 
+% Widths, use for figures
+\newcommand{\largewidth}{10cm}
+\newcommand{\smallwidth}{5cm}
+
 % Notation macros
 \newcommand{\dx}{\, \mathrm{d}x}
 \newcommand{\dX}{\, \mathrm{d}X}
 \newcommand{\ds}{\, \mathrm{d}s}
 \newcommand{\dt}{\, \mathrm{d}t}
 \newcommand{\R}{\mathbb{R}}
+\newcommand{\Hdiv}{H(\mathrm{div})}
+\newcommand{\Hcurl}{H(\mathrm{curl})}
+\newcommand{\nedelec}{N\'ed\'elec}
+\newcommand{\babuska}{Babu\v ska}
 
 % Example environment
 \newtheoremstyle{example}{\topsep}{\topsep}%
