Add chapter [kirby-2]: FIAT: Numerical Construction of Finite Element Basis Functions

--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -13,6 +13,8 @@
 \usepackage{longtable}
 \usepackage{here}
 \usepackage{array}
+\usepackage{algorithm}
+\usepackage{algpseudocode}
 
 % Fonts and chapter styles
 \usepackage{sectsty}
