--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -15,6 +15,8 @@
 \usepackage{array}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
+\usepackage{listings}
+\usepackage[usenames]{color}
 
 % Fonts and chapter styles
 \usepackage{sectsty}
