Add chapter [hoffman-4]: Parallel Adaptive Mesh Refinement

--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -14,6 +14,7 @@
 \usepackage{here}
 \usepackage{array}
 \usepackage{algorithm}
+\usepackage{algorithmicx}
 \usepackage{algpseudocode}
 \usepackage{listings}
 \usepackage[usenames]{color}
