Add chapter [alnes-1]: UFL: Unified Form Language

--- a/README
+++ b/README
@@ -9,6 +9,10 @@ Use common bibliography.bib
 
 Key format needs to be the same
 
+Only use EPS figures
+
+Use psfrag
+
 Instructions for authors
 ------------------------
 
