--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -18,6 +18,12 @@
 \usepackage{algpseudocode}
 \usepackage{listings}
 \usepackage[usenames]{color}
+\usepackage{moreverb}
+\usepackage{fancyvrb}
+\usepackage{bm}
+\usepackage{algorithm}
+\usepackage{multicol}
+\usepackage{url}
 
 % Fonts and chapter styles
 \usepackage{sectsty}
@@ -53,10 +59,21 @@
 \newcommand{\largewidth}{10cm}
 \newcommand{\smallwidth}{5cm}
 
+% Project names
+\newcommand{\projectbf}[1]{{#1}}
+\newcommand{\ufl}{\projectbf{UFL}}
+\newcommand{\sfc}{\projectbf{SFC}}
+\newcommand{\ufc}{\projectbf{UFC}}
+\newcommand{\ffc}{\projectbf{FFC}}
+\newcommand{\pydolfin}{\projectbf{PyDOLFIN}}
+\renewcommand{\dolfin}{\projectbf{DOLFIN}}
+\renewcommand{\fenics}{\projectbf{FEniCS}}
+
 % Notation macros
 \newcommand{\dx}{\, \mathrm{d}x}
 \newcommand{\dX}{\, \mathrm{d}X}
 \newcommand{\ds}{\, \mathrm{d}s}
+\newcommand{\dS}{\, \mathrm{d}S}
 \newcommand{\dt}{\, \mathrm{d}t}
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\Hdiv}{H(\mathrm{div})}
