Add chapter [hake]: Simulations of a coupled stochastic and deterministic model of \Ca dynamics in the dyadic cleft

--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -60,14 +60,22 @@
 \newcommand{\smallwidth}{5cm}
 
 % Project names
-\newcommand{\projectbf}[1]{{#1}}
-\newcommand{\ufl}{\projectbf{UFL}}
-\newcommand{\sfc}{\projectbf{SFC}}
-\newcommand{\ufc}{\projectbf{UFC}}
-\newcommand{\ffc}{\projectbf{FFC}}
-\newcommand{\pydolfin}{\projectbf{PyDOLFIN}}
-\renewcommand{\dolfin}{\projectbf{DOLFIN}}
-\renewcommand{\fenics}{\projectbf{FEniCS}}
+\newcommand{\projectfont}[1]{{#1}}
+\newcommand{\ufl}{\projectfont{UFL}}
+\newcommand{\sfc}{\projectfont{SFC}}
+\newcommand{\ufc}{\projectfont{UFC}}
+\newcommand{\ffc}{\projectfont{FFC}}
+\newcommand{\pydolfin}{\projectfont{PyDOLFIN}}
+\renewcommand{\dolfin}{\projectfont{DOLFIN}}
+\renewcommand{\fenics}{\projectfont{FEniCS}}
+
+% Package names
+\newcommand{\packagefont}[1]{{#1}}
+\newcommand{\numpy}{\packagefont{NumPy}}
+\newcommand{\python}{\packagefont{python}}
+\newcommand{\petsc}{\packagefont{PETSc}}
+\newcommand{\diffsim}{\packagefont{diffsim}}
+\newcommand{\tetgen}{\packagefont{TetGen}}
 
 % Notation macros
 \newcommand{\dx}{\, \mathrm{d}x}
@@ -80,6 +88,9 @@
 \newcommand{\Hcurl}{H(\mathrm{curl})}
 \newcommand{\nedelec}{N\'ed\'elec}
 \newcommand{\babuska}{Babu\v ska}
+
+% Math operators
+\DeclareMathOperator{\PEl}{PE_l}
 
 % Example environment
 \newtheoremstyle{example}{\topsep}{\topsep}%
