Add chapter [lezar]: Electromagnetic Waveguide Analysis

--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -16,7 +16,7 @@
 \usepackage{algorithm}
 \usepackage{algorithmicx}
 \usepackage{algpseudocode}
-\usepackage{listings}
+\usepackage[procnames]{listings}
 \usepackage[usenames]{color}
 \usepackage{moreverb}
 \usepackage{fancyvrb}
@@ -24,6 +24,7 @@
 \usepackage{algorithm}
 \usepackage{multicol}
 \usepackage{url}
+\usepackage{subfigure}
 
 % Fonts and chapter styles
 \usepackage{sectsty}
