Import all bibtex data from chapters into common bibliography.bib. Currently only used in [kirby-6] and [kirby-7]. Other chapters need to be updated by authors.

--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
 * Import all bibliographies: Anders
+* Update notation appendix: Anders
 * Use common bibliography in all chapters: authors
-* Choose environment for code listings
+* Choose environment for code listings: editors
+* Prefix all labels by chapter: authors
