added csf chapter

--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -77,6 +77,10 @@
 \newcommand{\petsc}{\packagefont{PETSc}}
 \newcommand{\diffsim}{\packagefont{diffsim}}
 \newcommand{\tetgen}{\packagefont{TetGen}}
+\newcommand{\emp}[1]{\texttt{#1}}
+\newcommand{\bit}{\begin{itemize}}
+\newcommand{\eit}{\end{itemize}}
+
 
 % Notation macros
 \newcommand{\dx}{\, \mathrm{d}x}
