Cleanup and update notation in appendix

--- a/TODO
+++ b/TODO
@@ -1,5 +1,14 @@
-* Import all bibliographies: Anders
-* Update notation appendix: Anders
-* Use common bibliography in all chapters: authors
-* Choose environment for code listings: editors
-* Prefix all labels by chapter: authors
+* Anders:  Import all bibliographies OK
+* Anders:  Update notation appendix
+* Editors: Choose environment for code listings: editors
+
+* Authors: Use common bibliography in all chapters
+* Authors: Prefix all labels by chapter
+
+Send comments to
+
+New front page
+
+Spell check
+
+Draft version 2009-06-07
