--- a/appendix/notation.tex
+++ b/appendix/notation.tex
@@ -8,148 +8,91 @@ The following notation is used throughout this book.
 \linespread{1.2}
   \begin{longtable}{ccl}
     $A$ &--&
-    the differential operator of the model $A(u) = f$ \\
-    $A$ &--&
     the \emph{global tensor} with entries $\{A_i\}_{i\in\mathcal{I}}$ \\
-    $A^0$ &--&
-    the \emph{reference tensor} with entries $\{A^0_{i\alpha}\}_{i\in\mathcal{I}_K,\alpha\in\mathcal{A}}$ \\
-    $\bar{A}^0$ &--&
-    the matrix representation of the (flattened) reference tensor $A^0$ \\
     $A^K$ &--&
     the \emph{element tensor} with entries $\{A^K_i\}_{i\in\mathcal{I}_K}$ \\
+    $A^0$ &--&
+    the \emph{reference tensor} with entries $\{A^0_{i\alpha}\}_{i\in\mathcal{I}_K,\alpha\in\mathcal{A}}$ \\
     $a$ &--&
-    the semilinear, multilinear or bilinear form \\
+    a multilinear form \\
     $a_K$ &--&
-    the local contribution to a multilinear form $a$ from $K$ \\
-    $a^K$ &--&
-    the vector representation of the (flattened) element tensor $A^K$ \\
+    the local contribution to a multilinear form $a$ from a cell $K$ \\
     $\mathcal{A}$ &--&
     the set of \emph{secondary indices} \\
     $\mathcal{B}$ &--&
     the set of \emph{auxiliary indices} \\
     $e$ &--&
-    the \emph{error}, $e = U - u$ \\
+    the \emph{error}, $e = u_h - u$ \\
     $F_K$ &--&
-    the mapping from $K_0$ to $K$ \\
+    the mapping from the reference cell $K_0$ to $K$ \\
     $G_K$ &--&
     the \emph{geometry tensor} with entries $\{G_K^{\alpha}\}_{\alpha\in\mathcal{A}}$ \\
-    $g_K$ &--&
-    the vector representation of the (flattened) geometry tensor $G_K$ \\
     $\mathcal{I}$ &--&
-    the set $\prod_{j=1}^r [1,N^j]$ of indices for the global tensor $A$ \\
+    the set $\prod_{j=1}^{\rho} [1,N^j]$ of indices for the global tensor $A$ \\
     $\mathcal{I}_K$ &--&
-    the set $\prod_{j=1}^r [1,n_K^j]$ of indices for the element tensor
-    $A^K$ (\emph{primary indices}) \\
+    the set $\prod_{j=1}^{\rho} [1,n_K^j]$ of indices for the element tensor $A^K$ (\emph{primary indices}) \\
     $\iota_K$ &--&
-    the \emph{local-to-global mapping} from $\mathcal{N}_K$ to $\mathcal{N}$ \\
-    $\hat{\iota}_K$ &--&
-    the local-to-global mapping from $\hat{\mathcal{N}}_K$ to $\hat{\mathcal{N}}$ \\
-    $\iota_K^j$ &--&
-    the local-to-global mapping from $\mathcal{N}_K^j$ to $\mathcal{N}^j$ \\
+    the \emph{local-to-global mapping} from $[1,n_K]$ to $[1,N]$ \\
     $K$ &--&
     a \emph{cell} in the mesh~$\mathcal{T}$ \\
     $K_0$ &--&
     the \emph{reference cell} \\
     $L$ &--&
-    the linear form (functional) on $\hat{V}$ or $\hat{V}_h$ \\
-    $m$ &--&
-    the number of discrete function spaces used in the definition of~$a$ \\
+    a linear form (functional) on $\hat{V}$ or $\hat{V}_h$ \\
+    $\mathcal{L}$ &--&
+    the degrees of freedom (linear functionals) on $V_h$ \\
+    $\mathcal{L}_K$ &--&
+    the degrees of freedom (linear functionals) on $\mathcal{P}_K$ \\
+    $\mathcal{L}_0$ &--&
+    the degrees of freedom (linear functionals) on $\mathcal{P}_0$ \\
     $N$ &--&
     the dimension of $\hat{V}_h$ and $V_h$ \\
-    $N^j$ &--&
-    the dimension $V_h^j$ \\
-    $N_q$ &--&
-    the number of quadrature points on a cell \\
-    $n_0$ &--&
-    the dimension of $\mathcal{P}_0$ \\
     $n_K$ &--&
     the dimension of $\mathcal{P}_K$ \\
-    $\hat{n}_K$ &--&
-    the dimension of $\hat{\mathcal{P}}_K$ \\
-    $n_K^j$ &--&
-    the dimension of $\mathcal{P}_K^j$ \\
-    $\mathcal{N}$ &--&
-    the set of global nodes on $V_h$ \\
-    $\hat{\mathcal{N}}$ &--&
-    the set of global nodes on $\hat{V}_h$ \\
-    $\mathcal{N}^j$ &--&
-    the set of global nodes on $V_h^j$ \\
-    $\mathcal{N}_0$ &--&
-    the set of local nodes on $\mathcal{P}_0$ \\
-    $\mathcal{N}_K$ &--&
-    the set of local nodes on $\mathcal{P}_K$ \\
-    $\hat{\mathcal{N}}_K$ &--&
-    the set of local nodes on $\hat{\mathcal{P}}_K$ \\
-    $\mathcal{N}_K^j$ &--&
-    the set of local nodes on ${\mathcal{P}_K^j}$ \\
-    $\nu^0_i$ &--&
-    a \emph{node} on $\mathcal{P}_0$ \\
-    $\nu^K_i$ &--&
-    a node on $\mathcal{P}_K$ \\
-    $\hat{\nu}^K_i$ &--&
-    a node on $\hat{\mathcal{P}}_K$ \\
-    $\nu^{K,j}_i$ &--&
-    a node on $\mathcal{P}_K^j$ \\
-    $\mathcal{P}_0$ &--&
-    the function space on $K_0$ for $V_h$ \\
-    $\hat{\mathcal{P}}_0$ &--&
-    the function space on $K_0$ for $\hat{V}_h$ \\
-    $\mathcal{P}_0^j$ &--&
-    the function space on $K_0$ for $V_h^j$ \\
+    $\ell_i$ &--&
+    a degree of freedom (linear functional) on $V_h$ \\
+    $\ell^K_i$ &--&
+    a degree of freedom (linear functional) on $\mathcal{P}_K$ \\
+    $\ell^0_i$ &--&
+    a degree of freedom (linear functional) on $\mathcal{P}_0$ \\
     $\mathcal{P}_K$ &--&
-    the local function space on $K$ for $V_h$ \\
-    $\hat{\mathcal{P}}_K$ &--&
-    the local function space on $K$ for $\hat{V}_h$ \\
-    $\mathcal{P}_K^j$ &--&
-    the local function space on $K$ for $V_h^j$ \\
+    the local function space on a cell $K$ \\
+    $\mathcal{P}_0$ &--&
+    the local function space on the reference cell $K_0$ \\
     $P_q(K)$ &--&
     the space of polynomials of degree $\leq q$ on $K$ \\
-    $\overline{\mathcal{P}}_K$ &--&
-    the local function space on $K$ generated by $\{\mathcal{P}_K^j\}_{j=1}^m$ \\
-    $R$ &--&
-    the \emph{residual}, $R(U) = A(U) - f$ \\
     $r$ &--&
-    the arity of the multilinear form $a$ (the rank of $A$ and $A^K$) \\
+    the (weak) residual, $r(v) = a(v, u_h) - L(v)$ or $r(v) = F(u_h; v)$ \\
+    $u_h$ &--&
+    the finite element solution, $u_h \in V_h$ \\
     $U$ &--&
-    the discrete approximate solution, $U \approx u$ \\
-    $(U_i)$ &--&
-    the vector of expansion coefficients for $U = \sum_{i=1}^N U_i \phi_i$ \\
+    the vector of degrees of freedom for $u_h = \sum_{i=1}^N U_i \phi_i$ \\
     $u$ &--&
-    the exact solution of the given model $A(u) = f$ \\
-    $V$ &--&
-    the space of trial functions on $\Omega$ (the trial space) \\
+    the exact solution of a variational problem, $u \in V$ \\
     $\hat{V}$ &--&
-    the space of test functions on $\Omega$ (the test space) \\
-    $V_h$ &--&
-    the space of discrete trial functions on $\Omega$ (the discrete trial space) \\
+    the test space \\
+    $V$ &--&
+    the trial space \\
+    $\hat{V}^*$ &--&
+    the dual test space, $\hat{V}^* = V_0$ \\
+    $V^*$ &--&
+    the dual trial space, $V^* = \hat{V}$ \\
     $\hat{V}_h$ &--&
-    the space of discrete test functions on $\Omega$ (the discrete test space) \\
-    $V_h^j$ &--&
-    a discrete function space on $\Omega$ \\  
-    $|V|$ &--&
-    the dimension of a vector space $V$ \\
-    $\Phi_i$ &--&
-    a basis function in $\mathcal{P}_0$ \\
-    $\hat{\Phi}_i$ &--&
-    a basis function in $\hat{\mathcal{P}}_0$ \\
-    $\Phi_i^j$ &--&
-    a basis function in $\mathcal{P}_0^j$ \\
+    the discrete test space \\
+    $V_h$ &--&
+    the discrete trial space \\
     $\phi_i$ &--&
     a basis function in $V_h$ \\
     $\hat{\phi}_i$ &--&
     a basis function in $\hat{V}_h$ \\
-    $\phi_i^j$ &--&
-    a basis function in $V_h^j$ \\
     $\phi_i^K$ &--&
     a basis function in $\mathcal{P}_K$ \\
-    $\hat{\phi}_i^K$ &--&
-    a basis function in $\hat{\mathcal{P}}_K$ \\
-    $\phi_i^{K,j}$ &--&
-    a basis function in $\mathcal{P}_K^j$ \\
+    $\Phi_i$ &--&
+    a basis function in $\mathcal{P}_0$ \\
     $z$ &--&
-    the \emph{dual solution} \\
+    the \emph{dual solution}, $z \in V^*$ \\
     $\mathcal{T}$ &--&
-    the \emph{mesh} \\
+    the \emph{mesh}, $\mathcal{T} = \{K\}$ \\
     $\Omega$ &--&
     a bounded domain in~$\R^d$ \\
   \end{longtable}
