Move EPS files to eps sub directories

--- a/TODO
+++ b/TODO
@@ -4,6 +4,7 @@
 
 * Authors: Use common bibliography in all chapters
 * Authors: Prefix all labels by chapter
+* Authors: Use common width in figures: \smallwidth, \largewidth
 
 Send comments to
 
