Add cover page and new book title, see if you like it.

--- a/TODO
+++ b/TODO
@@ -1,15 +1,10 @@
 * Anders:  Import all bibliographies OK
-* Anders:  Update notation appendix
+* Anders:  Update notation appendix OK
+
+* Editors: Check notation appendix
+* Editors: Spell check
 * Editors: Choose environment for code listings: editors
 
 * Authors: Use common bibliography in all chapters
 * Authors: Prefix all labels by chapter
 * Authors: Use common width in figures: \smallwidth, \largewidth
-
-Send comments to
-
-New front page
-
-Spell check
-
-Draft version 2009-06-07
