--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -25,6 +25,10 @@
 \usepackage{multicol}
 \usepackage{url}
 \usepackage{subfigure}
+\usepackage{changepage}
+
+% Set margins
+\usepackage[top=3cm, bottom=3cm, left=3cm, right=3cm]{geometry} 
 
 % Fonts and chapter styles
 \usepackage{sectsty}
