--- a/frontmatter/titlepage.tex
+++ b/frontmatter/titlepage.tex
@@ -1,26 +1,45 @@
+%FIXME: Figure out exact placement of cover image
+
+\pagestyle{empty}
+
+% Cover image
+\changepage{10cm}{10cm}{-3.62cm}{-3.62cm}{}{-3cm}{}{}{}
+\includegraphics[width=210mm]{frontmatter/cover.eps}
+\thispagestyle{empty}
+\newpage
+\changepage{-10cm}{-10cm}{3.62cm}{3.62cm}{}{3cm}{}{}{}
+
+% Some useful information
+\null\vfill
+\noindent
+\begin{minipage}{\textwidth}
+  Automated Scientific Computing \\
+  Logg, Mardal, Wells (editors) \\ \\
+  This is a preliminary draft, dated \today. \\
+  Send comments and suggestions to \texttt{fenics-book-dev@fenics.org}.
+\end{minipage}
+\newpage
+
+% Title page
 \begin{center}
 
-  \Huge
+  \vspace{1cm}
 
-  Automated Solution of
+  \LARGE
 
-  Differential Equations
+  Automated Scientific Computing
 
-  \vspace{0.5cm}
+  \vspace{1cm}
 
-  \large
+  \emph{The FEniCS Book}
 
-  Title to be decided
+  \vfill
+
+  \Large
+
+  Preliminary draft dated \today
 
 \end{center}
 
-\vfill
-
-\noindent
-\emph{Editors} \\
-Anders Logg \\
-Kent-Andre Mardal \\
-Garth N. Wells
-
-\thispagestyle{empty}
-\newpage
+\cleardoublepage
+\pagestyle{fancy}
