Add note about chapter label/reference to all chapters

--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -47,16 +47,17 @@
 }
 
 % Book macros
-\newcommand{\fenicschapter}[3]{\chapter{#1 \\ \small{\rm By #3}} \chead[#2]{#3}}
+\newcommand{\fenicschapter}[4]{\chapter{#1 \\ \small{\rm By #3}} \vspace{-1cm}
+                               Chapter ref: \textbf{[#4]} \vspace{1cm} \chead[#2]{#3}}
 \newcommand{\fenicsappendix}[2]{\chapter{#1} \chead{#2}}
 \newcommand{\fenics}{\textbf{FEniCS}}
 \newcommand{\dolfin}{\textbf{DOLFIN}}
-\newcommand{\authornote}[1]{\ \\ \vspace{0.2cm} \begin{center} \begin{minipage}{0.9\textwidth}
-                            \small\it $\blacktriangleright$ \underline{\emph{Author note:}} #1
-                            \end{minipage} \end{center} \vspace{0.2cm} \normalsize}
-\newcommand{\editornote}[1]{\ \\ \vspace{0.2cm} \begin{center} \begin{minipage}{0.9\textwidth}
+\newcommand{\editornote}[1]{\noindent\begin{minipage}{\textwidth}
                             \small\it $\blacktriangleright$ \underline{\emph{Editor note:}} #1
-                            \end{minipage} \end{center} \vspace{0.2cm} \normalsize}
+                            \end{minipage}\normalsize \vspace{0.2cm}}
+\newcommand{\authornote}[1]{\noindent\begin{minipage}{\textwidth}
+                            \small\it $\blacktriangleright$ \underline{\emph{Author note:}} #1
+                            \end{minipage}\normalsize \vspace{0.2cm}}
 \newcommand{\includechapter}[1]{\include{chapters/#1/chapter}\clearemptydoublepage}
 \newcommand{\includeappendix}[1]{\include{appendix/#1}\clearemptydoublepage}
 
