Fixes for duplicate macros in [kirby-1]

--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -108,6 +108,15 @@
 \theoremstyle{example}
 \newtheorem{example}{Example}[chapter]
 
+% Definition environment
+\newtheorem{definition}{Definition}[chapter]
+
+% Propopsition environment
+\newtheorem{proposition}{Proposition}[section]
+
+% Remark environment
+\newtheorem{remark}{Remark}[section]
+
 % Code environment
 \DefineVerbatimEnvironment{code}{Verbatim}{frame=single,rulecolor=\color{blue}}
 
