Add empty chapters [logg-3] and [logg-4].

--- a/book.tex
+++ b/book.tex
@@ -15,7 +15,7 @@
 
 %\part{Overview}
 
-\includechapter{introduction}
+\includechapter{intro}
 \includechapter{langtangen}
 
 \part{Methodology}
@@ -24,6 +24,8 @@
 \includechapter{kirby-6}
 \includechapter{kirby-1}
 \includechapter{kirby-5}
+\includechapter{logg-3}
+\includechapter{logg-4}
 \includechapter{kirby-4}
 \includechapter{hoffman-4}
 \includechapter{oelgaard-2}
@@ -40,6 +42,8 @@
 \includechapter{alnes-1}
 \includechapter{hoffman-2}
 \includechapter{mardal-2}
+
+logg-1
 
 \part{Applications}
 
