Add empty Viper chapter

--- a/book.tex
+++ b/book.tex
@@ -41,6 +41,7 @@
 \includechapter{alnes-2}
 \includechapter{alnes-1}
 \includechapter{hoffman-2}
+\includechapter{skavhaug}
 \includechapter{mardal-2}
 
 \part{Applications}
