--- a/frontmatter/titlepage.tex
+++ b/frontmatter/titlepage.tex
@@ -15,7 +15,7 @@
 \begin{minipage}{\textwidth}
   Automated Scientific Computing \\
   Logg, Mardal, Wells (editors) \\ \\
-  This is a preliminary draft, dated \today. \\
+  This is a preliminary draft, \today. \\
   Send comments and suggestions to \texttt{fenics-book-dev@fenics.org}.
 \end{minipage}
 \newpage
@@ -37,9 +37,34 @@
 
   \Large
 
-  Preliminary draft dated \today
+  Preliminary draft, \today
 
 \end{center}
-
 \cleardoublepage
+
+% Nice qute
+\null\vspace{5cm}
+\linespread{1.5}
+\begin{center}
+  \begin{quote}
+    \it
+
+    And now that we may give final praise to the machine we may say that
+    it will be desirable to all who are engaged in computations which, it
+    is well known, are the managers of financial affairs, the
+    administrators of others' estates, merchants, surveyors, geographers,
+    navigators, astronomers\ldots For it is unworthy of excellent men to lose
+    hours like slaves in the labor of calculations which could safely be
+    relegated to anyone else if the machine were used.
+    
+    \rm
+
+    \vspace{0.5cm}
+    
+    Gottfried Wilhelm Leibniz (1646--1716)
+  \end{quote}
+\end{center}
+\linespread{1.0}
+\cleardoublepage
+
 \pagestyle{fancy}
