Add list of authors

--- a/book.tex
+++ b/book.tex
@@ -75,9 +75,12 @@
 \bibliographystyle{alpha}
 \bibliography{bibliography}
 
-% Appendinx
+% Appendix
 \appendix
 \includeappendix{notation}
+
+% List of authors
+\includemisc{authors}
 
 % Index
 \cleardoublepage
