--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -60,6 +60,7 @@
                             \end{minipage}\normalsize \vspace{0.2cm}}
 \newcommand{\includechapter}[1]{\include{chapters/#1/chapter}\clearemptydoublepage}
 \newcommand{\includeappendix}[1]{\include{appendix/#1}\clearemptydoublepage}
+\newcommand{\includemisc}[1]{\include{#1}\clearemptydoublepage}
 
 % Widths, use for figures
 \newcommand{\largewidth}{10cm}
