Add labels chap:foo to all chapters, use in [kirby-7]

--- a/README
+++ b/README
@@ -13,6 +13,8 @@ Only use EPS figures
 
 Use psfrag
 
+Use references to chapters: \ref{chap:foo}
+
 Instructions for authors
 ------------------------
 
