--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -48,7 +48,7 @@
 
 % Book macros
 \newcommand{\fenicschapter}[4]{\chapter{#1 \\ \small{\rm By #3}} \vspace{-1cm}
-                               Chapter ref: \textbf{[#4]} \vspace{1cm} \chead[#2]{#3}}
+                              Chapter ref: \textbf{[#4]} \label{chap:#4} \vspace{1cm} \chead[#2]{#3}}
 \newcommand{\fenicsappendix}[2]{\chapter{#1} \chead{#2}}
 \newcommand{\fenics}{\textbf{FEniCS}}
 \newcommand{\dolfin}{\textbf{DOLFIN}}
