--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -53,10 +53,10 @@
 \newcommand{\fenics}{\textbf{FEniCS}}
 \newcommand{\dolfin}{\textbf{DOLFIN}}
 \newcommand{\editornote}[1]{\noindent\begin{minipage}{\textwidth}
-                            \small\it $\blacktriangleright$ \underline{\emph{Editor note:}} #1
+                            \small\it $\blacktriangleright$ \underline{\emph{Editor note}}: #1
                             \end{minipage}\normalsize \vspace{0.2cm}}
 \newcommand{\authornote}[1]{\noindent\begin{minipage}{\textwidth}
-                            \small\it $\blacktriangleright$ \underline{\emph{Author note:}} #1
+                            \small\it $\blacktriangleright$ \underline{\emph{Author note}}: #1
                             \end{minipage}\normalsize \vspace{0.2cm}}
 \newcommand{\includechapter}[1]{\include{chapters/#1/chapter}\clearemptydoublepage}
 \newcommand{\includeappendix}[1]{\include{appendix/#1}\clearemptydoublepage}
