Update design of cover page to suggested layout by Harish

--- a/frontmatter/titlepage.tex
+++ b/frontmatter/titlepage.tex
@@ -3,11 +3,19 @@
 \pagestyle{empty}
 
 % Cover image
-\changepage{10cm}{10cm}{-3.62cm}{-3.62cm}{}{-3cm}{}{}{}
-\includegraphics[width=210mm]{frontmatter/cover.eps}
+\changepage{4.9cm}{4cm}{}{-2cm}{}{}{}{}{}
+\definecolor{fenicsred}{RGB}{215, 30, 40}
+\pagecolor{fenicsred}
+\hfill
+\includegraphics{frontmatter/eps/editors.eps} \\
+\includegraphics[height=8cm]{frontmatter/eps/title.eps}
+\vfill
+\hfill
+\includegraphics[height=12cm]{frontmatter/eps/f.eps}
 \thispagestyle{empty}
 \newpage
-\changepage{-10cm}{-10cm}{3.62cm}{3.62cm}{}{3cm}{}{}{}
+\changepage{-4.9cm}{-4cm}{}{2cm}{}{}{}{}{}
+\pagecolor{white}
 
 % Some useful information
 \null\vfill
