Update README file with instructions for authors.

--- a/TODO
+++ b/TODO
@@ -3,7 +3,7 @@
 
 * Editors: Check notation appendix
 * Editors: Spell check
-* Editors: Choose environment for code listings: editors
+* Editors: Choose environment for code listings
 
 * Authors: Use common bibliography in all chapters
 * Authors: Prefix all labels by chapter
