--- a/README
+++ b/README
@@ -1,49 +1,62 @@
 This repository contains all files for the FEniCS book.
 
-
-Put SVG and EPS files under
-
-  chapters/foo/svg
-  chapters/foo/eps
-
-Use common bibliography.bib
-
-Key format needs to be the same
-
-Only use EPS figures
-
-Use psfrag
-
-Use references to chapters: \ref{chap:foo}
-
 Instructions for authors
 ------------------------
 
-* Rename the directory chapters/foo to something suitable, for example
-  karpeev_knepley, scott_terrel or similar.
+* All files for chapter [foo] are located in the subdirectory chapters/foo.
 
-* Put the text for your chapter in the file chapter.tex in your
-  subdirectory.
+* Write the chapter in chapters/foo/chapter.tex.
 
-* Put references in the common file bibliography.bib. Use keys such as
-  FooBar2008a, concatenating the first three letters of the last names
-  of the first two authors with the year and an additional character
-  to separate multiple references by the same authors. The editors
-  will sort out any overlapping references/keys later.
+* Put SVG and EPS files under
 
-* Put any figures directly in your subdirectory.
+    chapters/foo/svg
+    chapters/foo/eps
 
-* Use EPS files for figures in combination with psfrag.
+* References are stored in the common file bibliography.bib. If you find
+  that a reference is missing, submit it to one of the editors in BibTeX
+  format and it will be imported into the common bibliography.
 
-* Use a spell-checker to check your text before submitting.
+  Most (all?) references used in the currently included chapters have been
+  imported into the common bibliography using JabRef with keys [authors2][year]
+  but the citations have not been updated in all chapters.
+
+* All labels inside a chapter should be prefixed by the chapter prefix.
+  For chapter [foo], the following labels should be used:
+
+    \label{foo:eq:bar}  for equations
+    \label{foo:fig:bar} for figures
+    \label{foo:alg:bar} for algorithms
+    \label{foo:sec:bar} for sections
+
+* All chapters are automatically labeled by their prefix.
+  To refer to another chapter named [foo], use
+
+    In Chapter~\ref{chap:foo}, ...
+
+* Only use EPS figures. We rely on psfrag for replacement of text
+  in figures and so cannot use pdflatex.
+
+* Use psfrag to replace axis labels etc with LaTeX:
+
+    \psfrag{x}{$x$}
+    \psfrag{y}{$y$}
+
+* Use Inkscape to draw figures. You can use one of the SVG files from
+  chapter [kirby-6] as a template for line widths and colors.
+
+* Use a spell checker (American English).
 
 * Use \index{} to include important terms in the book index.
 
-* Build the book by typing 'make' or 'make final'.
+* Build the book by typing 'make' (for DVI) or 'make final' (for PDF).
 
-* When you are done, pack up your subdirectory as a tarball and submit
-  it together with the file bibliography.bib to one of the editors:
+* Send comments and questions to fenics-book@fenics.org.
 
-  Anders Logg <logg@simula.no>
-  Kent-Andre Mardal <kent-and@simula.no>
-  Garth N. Wells <gnw20@cam.ac.uk>
+* This repository is primarily intended for editing. Developing the
+  text itself should preferrably be done offline (or online in another
+  repository) as not to flood the mailing list with very frequent
+  commits for all 40 chapters.
+
+Anders Logg <logg@simula.no>
+Kent-Andre Mardal <kent-and@simula.no>
+Garth N. Wells <gnw20@cam.ac.uk>
